Solve the bug of the venue not showing

--- a/static/styles.css
+++ b/static/styles.css
@@ -60,6 +60,7 @@ hr {
     background-color: var(--secondary-bg-color);
     border: 1px solid var(--border-color);
     color: var(--primary-text-color);
+    border-radius: 12px;
 }
 
 .card-body {
@@ -322,8 +323,7 @@ a:hover {
 
 .site-header {
     padding: 1rem 0;
-    border-bottom: 2px solid rgb(84, 30, 93);
-    background-color: var(--dark-purple);
+    background-color: var(--primary-bg-color);
 }
 
 .header-logo {
